--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "my-bot",
+    "name": "markov",
     "version": "1.0.0",
-    "author": "Kevin Novak",
-    "description": "A discord.js bot template written with TypeScript",
+    "author": "mja00",
+    "description": "A discord.js bot originally based on Markov chains",
     "license": "MIT",
     "private": true,
     "engines": {
@@ -48,6 +48,7 @@
         "luxon": "3.4.4",
         "node-fetch": "3.3.2",
         "node-schedule": "2.1.1",
+        "openai": "^4.28.4",
         "pino": "8.17.2",
         "pino-pretty": "10.3.1",
         "pm2": "^5.3.0",
