--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "start:pm2": "npm run build && npm run pm2:start",
         "pm2:start": "pm2 start process.json",
         "pm2:stop": "pm2 stop process.json",
-        "pm2:delete": "pm2 delete process.json"
+        "pm2:delete": "pm2 delete process.json",
+        "db:migrations:run": "npm run build && node --enable-source-maps dist/start-bot.js migrate",
+        "db:migrations:create": "pnpm drizzle-kit generate:pg --config=src/drizzle.config.ts"
     },
     "dependencies": {
         "@discordjs/rest": "2.2.0",
@@ -41,6 +43,7 @@
         "cron-parser": "^4.9.0",
         "discord.js": "14.14.1",
         "discord.js-rate-limiter": "1.3.2",
+        "drizzle-orm": "^0.30.1",
         "express": "4.18.2",
         "express-promise-router": "4.1.1",
         "filesize": "10.1.0",
@@ -52,6 +55,7 @@
         "pino": "8.17.2",
         "pino-pretty": "10.3.1",
         "pm2": "^5.3.0",
+        "postgres": "^3.4.3",
         "reflect-metadata": "^0.2.1",
         "remove-markdown": "0.5.0"
     },
@@ -63,6 +67,7 @@
         "@types/remove-markdown": "0.3.4",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
+        "drizzle-kit": "^0.20.14",
         "eslint": "^8.56.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-unicorn": "^50.0.1",
