--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "dependencies": {
         "@discordjs/rest": "2.2.0",
+        "@fal-ai/serverless-client": "^0.14.2",
         "class-transformer": "0.5.1",
         "class-validator": "0.14.0",
         "cron-parser": "^4.9.0",
