--- a/package.json
+++ b/package.json
@@ -37,42 +37,43 @@
         "db:migrations:create": "pnpm drizzle-kit generate:pg --config=src/drizzle.config.ts"
     },
     "dependencies": {
-        "@discordjs/rest": "2.4.2",
+        "@discordjs/rest": "2.6.0",
         "@fal-ai/serverless-client": "^0.15.0",
         "class-transformer": "0.5.1",
-        "class-validator": "0.14.0",
-        "cron-parser": "^4.9.0",
-        "discord.js": "14.17.3",
+        "class-validator": "0.14.2",
+        "cron-parser": "^5.3.0",
+        "discord.js": "14.22.1",
         "discord.js-rate-limiter": "1.3.2",
-        "drizzle-orm": "^0.30.1",
-        "express": "4.18.2",
+        "drizzle-orm": "^0.44.4",
+        "express": "5.1.0",
         "express-promise-router": "4.1.1",
-        "filesize": "10.1.0",
+        "filesize": "11.0.2",
         "linguini": "1.3.1",
-        "luxon": "3.4.4",
+        "luxon": "3.7.1",
         "node-fetch": "3.3.2",
         "node-schedule": "2.1.1",
-        "openai": "^4.85.4",
-        "pino": "8.17.2",
-        "pino-pretty": "10.3.1",
-        "pm2": "^5.3.0",
-        "postgres": "^3.4.3",
-        "reflect-metadata": "^0.2.1",
-        "remove-markdown": "0.5.0"
+        "openai": "^5.15.0",
+        "pino": "9.9.0",
+        "pino-pretty": "13.1.1",
+        "pm2": "^6.0.8",
+        "postgres": "^3.4.7",
+        "reflect-metadata": "^0.2.2",
+        "remove-markdown": "0.6.2"
     },
     "devDependencies": {
+        "@eslint/js": "^9.33.0",
         "@types/express": "4.17.21",
-        "@types/luxon": "3.3.7",
-        "@types/node": "^20.10.5",
-        "@types/node-schedule": "2.1.5",
+        "@types/luxon": "3.7.1",
+        "@types/node": "^24.3.0",
+        "@types/node-schedule": "2.1.8",
         "@types/remove-markdown": "0.3.4",
-        "@typescript-eslint/eslint-plugin": "^6.16.0",
-        "@typescript-eslint/parser": "^6.16.0",
-        "drizzle-kit": "^0.20.14",
-        "eslint": "^8.56.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-unicorn": "^50.0.1",
-        "prettier": "^3.1.1",
-        "typescript": "^5.3.3"
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "drizzle-kit": "^0.31.4",
+        "eslint": "^8.57.1",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-unicorn": "^48.0.1",
+        "prettier": "^3.6.2",
+        "typescript": "^5.9.2"
     }
 }
