--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "drizzle-orm": "^0.44.4",
         "express": "5.1.0",
         "filesize": "11.0.2",
+        "form-data": "^4.0.4",
         "linguini": "1.3.1",
         "luxon": "3.7.1",
         "node-fetch": "3.3.2",
