--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
         "pm2:start": "pm2 start process.json",
         "pm2:stop": "pm2 stop process.json",
         "pm2:delete": "pm2 delete process.json",
-        "db:migrations:run": "npm run build && node --enable-source-maps dist/start-bot.js migrate",
-        "db:migrations:create": "pnpm drizzle-kit generate:pg --config=src/drizzle.config.ts"
+        "db:migrate": "npm run build && node --enable-source-maps dist/scripts/migrate.js",
+        "db:seed": "npm run build && node --enable-source-maps dist/scripts/seed.js",
+        "db:setup": "npm run db:push && npm run db:seed",
+        "db:generate": "drizzle-kit generate --config=src/drizzle.config.ts",
+        "db:push": "drizzle-kit push --config=src/drizzle.config.ts",
+        "db:studio": "drizzle-kit studio --config=src/drizzle.config.ts"
     },
     "dependencies": {
         "@discordjs/rest": "2.6.0",
@@ -44,6 +48,7 @@
         "cron-parser": "^5.3.0",
         "discord.js": "14.22.1",
         "discord.js-rate-limiter": "1.3.2",
+        "dotenv": "^17.2.3",
         "drizzle-orm": "^0.44.4",
         "express": "5.1.0",
         "filesize": "11.0.2",
