feat: add catchables generator

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "pm2:start": "pm2 start process.json",
         "pm2:stop": "pm2 stop process.json",
         "pm2:delete": "pm2 delete process.json",
+        "db:add-catchables": "npm run build && node --enable-source-maps dist/scripts/add-catchables.js",
         "db:migrate": "npm run build && node --enable-source-maps dist/scripts/migrate.js",
         "db:seed": "npm run build && node --enable-source-maps dist/scripts/seed.js",
         "db:setup": "npm run db:push && npm run db:seed",
@@ -57,11 +58,13 @@
         "luxon": "3.7.1",
         "node-fetch": "3.3.2",
         "node-schedule": "2.1.1",
+        "ink": "^6.5.0",
         "openai": "^5.15.0",
         "pino": "9.9.0",
         "pino-pretty": "13.1.1",
         "pm2": "^6.0.8",
         "postgres": "^3.4.7",
+        "react": "^19.0.0",
         "reflect-metadata": "^0.2.2",
         "remove-markdown": "0.6.2"
     },
