--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": false,
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "jsx": "react-jsx"
     },
     "exclude": ["dist", "node_modules", "tests"]
 }
