--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "lint:fix": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
+        "test": "vitest run",
+        "test:unit": "vitest run tests/unit",
+        "test:integration": "vitest run tests/integration",
+        "test:watch": "vitest watch",
+        "test:coverage": "vitest run --coverage",
         "clean": "git clean -xdf --exclude=\"/config/**/*\"",
         "clean:dry": "git clean -xdf --exclude=\"/config/**/*\" --dry-run",
         "build": "tsc --project tsconfig.json",
@@ -55,11 +60,11 @@
         "express": "5.1.0",
         "filesize": "11.0.2",
         "form-data": "^4.0.4",
+        "ink": "^6.5.0",
         "linguini": "1.3.1",
         "luxon": "3.7.1",
         "node-fetch": "3.3.2",
         "node-schedule": "2.1.1",
-        "ink": "^6.5.0",
         "openai": "^5.15.0",
         "pino": "9.9.0",
         "pino-pretty": "13.1.1",
@@ -78,11 +83,13 @@
         "@types/remove-markdown": "0.3.4",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
+        "@vitest/coverage-v8": "^4.0.9",
         "drizzle-kit": "^0.31.4",
         "eslint": "^8.57.1",
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-unicorn": "^48.0.1",
         "prettier": "^3.6.2",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "vitest": "^4.0.9"
     }
 }
