--- a/.eslintignore
+++ b/.eslintignore
@@ -8,3 +8,9 @@
 /temp
 /src/db/schema.js
 /src/db/schema.d.ts
+
+# Config files
+vitest.config.ts
+vitest.config.js
+vitest.config.d.ts
+vitest.config.js.map
